scrollbar Fixed

--- a/Planche/sass/style.scss
+++ b/Planche/sass/style.scss
@@ -103,7 +103,10 @@ body{
   background-color: $side_back;
   box-shadow: 1px -1px 3px 3px rgba(0, 0, 0, 0.2);
   // padding-top: 60px;
-  overflow: hidden;
+  overflow: auto;
+  // transition: 0ms cubic-bezier(0.1, 0.57, 0.1, 1);
+  // -webkit-transition: 0ms cubic-bezier(0.1, 0.57, 0.1, 1);
+  // transform: translate(0px, 0px) translateZ(0px);
 }
 .drawer-hamburger-icon{
   background-color: $side_menu_font;
